--- a/yeb-server/src/main/resources/application.yml
+++ b/yeb-server/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
 minio:
   endpoint: 192.168.10.100
   port: 9000
-  accessKey: AKIAIOSFODNN7EXAMPLE
-  secretKey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+  accessKey:
+  secretKey:
   secure: false
-  bucketName: "lwf"
-  configDir: "/data/"
+  bucketName:
+  configDir:
